# cookiecutter-fastapi

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  matrix.py  test_render_matrix.py  test_smoke.py
{{cookiecutter.project_slug}}/: .env.example  alembic.ini  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/app/: config.py  database.py  logging.py  main.py  middlewares.py
{{cookiecutter.project_slug}}/compose/local/fastapi/: Dockerfile  entrypoint  start
{{cookiecutter.project_slug}}/compose/production/fastapi/: Dockerfile  entrypoint  start
{{cookiecutter.project_slug}}/compose/production/postgres/: Dockerfile
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/tests/: conftest.py
