[project]
name = "cookiecutter-fastapi"
version = "0.1.0"
description = "A cookiecutter template for production-ready FastAPI projects"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.0",
    "pytest-cookies>=0.7.0",
    "pytest-xdist>=3.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -ra --strict-markers"
markers = [
    "smoke: runs uv sync + ruff + pytest inside rendered project (slow)",
]
