[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
