[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
{%- if cookiecutter.use_postgresql == 'y' %}
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
{%- endif %}
    "fastapi>=0.115.0",
{%- if cookiecutter.use_opentelemetry == 'y' %}
    "opentelemetry-distro>=0.62b0",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
{%- if cookiecutter.use_postgresql == 'y' %}
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0",
{%- endif %}
{%- endif %}
    "pydantic-settings>=2.6.0",
    "python-json-logger>=3.2.0",
{%- if cookiecutter.use_postgresql == 'y' %}
    "sqlalchemy[asyncio]>=2.0.36",
{%- endif %}
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
{%- if cookiecutter.use_postgresql == 'y' %}
    "aiosqlite>=0.20.0",
{%- endif %}
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
